fix alignment for new ad provider

--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -357,6 +357,7 @@ footer {
 
 #advertisements div {
   font-size: 13px;
+  text-align: left;
 }
 
 
